all the page layout is done but wwhen bootstrap update to V4 the navigation fixed(affix) in the postion not working

--- a/style/header.css
+++ b/style/header.css
@@ -43,4 +43,7 @@ html,body {
 section {
   height:calc(90% - 50px);
   height: 90vh;
+  padding-top: 60px;
+  background-color: rgba(255,255,255, 0.75);
+
 }
